[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/MDRider/Canvas.gd" type="Script" id=1]
[ext_resource path="res://addons/MDRider/Previewer.gd" type="Script" id=2]
[ext_resource path="res://addons/MDRider/Defautl.theme" type="Theme" id=3]
[ext_resource path="res://addons/MDRider/MD Icon.png" type="Texture" id=4]

[node name="Canvas" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 1019.0
margin_bottom = 590.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1014.0
margin_bottom = 26.0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 505.0
margin_bottom = 26.0
size_flags_horizontal = 3
right_icon = ExtResource( 4 )
placeholder_text = "File name without .md"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 509.0
margin_right = 1014.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="Open" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 250.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Open"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 254.0
margin_right = 505.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Save"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 1014.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Writer" type="TextEdit" parent="MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 501.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "To Open any `.md` file
Enter path name excluding `res://` and `.md` and click on open 
Example: `scene/rules`

This will open up file from `scene` folder and `rules` md file 
To save at any location follow same points. "
highlight_current_line = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true

[node name="Previewer" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 513.0
margin_right = 1014.0
margin_bottom = 550.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
bbcode_enabled = true
selection_enabled = true
script = ExtResource( 2 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2/Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2/Save" to="." method="_on_Save_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HSplitContainer/Writer" to="." method="_on_Writer_text_changed"]
